@startuml Complaint - Class Diagram
!define ENTITY_COLOR #E8F5E9

skinparam backgroundColor #FAFAFA
skinparam linetype ortho
skinparam nodesep 120
skinparam ranksep 120
skinparam padding 15
skinparam classBackgroundColor ENTITY_COLOR
skinparam classBorderColor #81C784
skinparam arrowThickness 1.5

' Title
title Complaint - Class Diagram\nEntity Level - Relationships Focus

' =============== ENTITIES ===============

class User <<Entity>> {
}

class Transaction <<Entity>> {
}

class Complaint <<Entity>> {
}

' =============== LAYOUT HINTS (Hidden) ===============

User -[hidden]right- Transaction
Transaction -[hidden]right- Complaint

' =============== MAIN RELATIONSHIPS ===============

User "1" ..> "0..*" Complaint : <<customer>>

User "1" ..> "0..*" Complaint : <<seller>>

User "0..1" ..> "0..*" Complaint : <<admin handler>>

Transaction "1" <-- "0..*" Complaint : <<about>>

' =============== LEGEND ===============

legend bottom
  **Relationship Types:**
  | Symbol | Meaning |
  | ┄┄┄┄┄▶ | Dependency (dotted) |

  **Complaint Flow:**
  1. Customer creates Complaint about Transaction
  2. Complaint links: Customer + Seller + Transaction
  3. Seller responds to Complaint
  4. Customer can escalate to Admin
  5. Admin resolves Complaint
end legend

@enduml

